FIX styles:  letter-spacing values remove ()

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -196,9 +196,7 @@ $letter-spacings: (
 $utilities: (
         "letter-spacing": (
                 property: letter-spacing,
-                values: (
-                        map-merge($letter-spacings, negativify-map($letter-spacings))
-                )
+                values: map-merge($letter-spacings, negativify-map($letter-spacings))
         )
 );
 // ---------------------------------------------------------------------------------
